--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,13 +42,15 @@ variables:
   ISB401_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:isb401_$CI_COMMIT_TAG
 
 
+
 base-image:
   tags:
     - docker
     - $RUNNER_TAG
   stage: dep_images
   rules:
-    - changes:
+    - if: $CI_COMMIT_TAG == ""
+      changes:
         - docker/base/Dockerfile
   script:
     - cd docker/base
@@ -64,7 +66,8 @@ ssuser-image:
     - job: base-image
       optional: true
   rules:
-    - changes:
+    - if: $CI_COMMIT_TAG == ""
+      changes:
         - docker/ssuser/Dockerfile
   script:
     - cd docker/ssuser
@@ -80,7 +83,8 @@ isb401-base-image:
     - job: ssuser-image
       optional: true
   rules:
-    - changes:
+    - if: $CI_COMMIT_TAG == ""
+      changes:
         - docker/isb401_base/Dockerfile
   script:
     - cd docker/isb401_base
@@ -96,9 +100,6 @@ build:
   script:
     - docker build --pull -t $TEST_IMAGE .
     - docker push $TEST_IMAGE
-  only:
-    - devel
-    - master
 
 build-isb401:
   tags:
@@ -109,11 +110,8 @@ build-isb401:
     - job: build
   script:
     - cp docker/isb401/Dockerfile .
-    - docker build --pull -t ISB401_TEST_IMAGE .
-    - docker push ISB401_TEST_IMAGE
-  only:
-    - devel
-    - master
+    - docker build --pull -t $ISB401_TEST_IMAGE .
+    - docker push $ISB401_TEST_IMAGE
 
 test:
   tags:
@@ -130,11 +128,8 @@ test-isb401:
     - $RUNNER_TAG
   stage: test
   script:
-    - docker pull $TEST_ISB401_IMAGE
-    - docker run $TEST_ISB401_IMAGE test
-  only:
-    - devel
-    - master
+    - docker pull $ISB401_TEST_IMAGE
+    - docker run $ISB401_TEST_IMAGE test
 
 release-image:
   tags:
@@ -143,7 +138,7 @@ release-image:
   stage: release
   script:
     - docker pull $TEST_IMAGE
-    - docker tag $TEST_IMAGE $CONTAINER_RELEASE_IMAGE
+    - docker tag $TEST_IMAGE $RELEASE_IMAGE
     - docker push $RELEASE_IMAGE
   rules:
     - if: $CI_COMMIT_TAG =~ /^v[0-9]+.[0-9]+.[0-9]+/
